refactor the ProductIdTable